# my_tools

./: .gitignore  README.md
gumloop_uber_recipts_processing/: README.md  extract_uber_data.py  extracted_uber_data.json  process_uber_receipts.py  pyproject.toml  test_receipts.json  uber_data.json
